Fix gap between buttons Sign up and Login

--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -15,6 +15,9 @@ h1,h2 {
     box-shadow: none;
   }
 }
+.navbar-collapse > form {
+  gap: 24px;
+}
 .active-link {
     background: $accent-gradient;
     border-radius: 100px;
